--- a/Makefile.retrogame
+++ b/Makefile.retrogame
@@ -443,8 +443,8 @@ ipk: all
 	@cp bin/fbasdl.lnk /tmp/.fbasdl-ipk/root/home/retrofw/apps/gmenu2x/sections/emulators
 	@cp bin/cps1.fbasdl.lnk bin/cps2.fbasdl.lnk bin/neogeo.fbasdl.lnk /tmp/.fbasdl-ipk/root/home/retrofw/apps/gmenu2x/sections/emulators.systems
 	@sed "s/^Version:.*/Version: $$(date +%Y%m%d)/" bin/control > /tmp/.fbasdl-ipk/control
-	@cp bin/conffiles /tmp/.fbasdl-ipk/
-	@tar --owner=0 --group=0 -czvf /tmp/.fbasdl-ipk/control.tar.gz -C /tmp/.fbasdl-ipk/ control conffiles
+	@cp bin/conffiles bin/postinst /tmp/.fbasdl-ipk/
+	@tar --owner=0 --group=0 -czvf /tmp/.fbasdl-ipk/control.tar.gz -C /tmp/.fbasdl-ipk/ control conffiles postinst
 	@tar --owner=0 --group=0 -czvf /tmp/.fbasdl-ipk/data.tar.gz -C /tmp/.fbasdl-ipk/root/ .
 	@echo 2.0 > /tmp/.fbasdl-ipk/debian-binary
 	@ar r bin/fbasdl.ipk /tmp/.fbasdl-ipk/control.tar.gz /tmp/.fbasdl-ipk/data.tar.gz /tmp/.fbasdl-ipk/debian-binary
